ARROW-6618: [Python] Fix read_message() segfault on end of stream

Closes #5437 from pitrou/ARROW-6618-read-message-crash and squashes the following commits:

a3490192d <Wes McKinney> Raise exception when reading neither 0 nor 4 bytes from first 4 bytes of IPC message input
8f564641d <Antoine Pitrou> ARROW-6618:  Fix read_message() segfault on end of stream

Lead-authored-by: Antoine Pitrou <antoine@python.org>
Co-authored-by: Wes McKinney <wesm+git@apache.org>
Signed-off-by: Wes McKinney <wesm+git@apache.org>